fix(#151): Options of the select wrong color

--- a/frontend/src/app/admin/pages/patient/info-form/info-form.component.scss
+++ b/frontend/src/app/admin/pages/patient/info-form/info-form.component.scss
@@ -28,6 +28,10 @@ form {
       color: color.scale($darkRed, $lightness: -5%);
     }
 
+    option {
+      color: black;
+    }
+
     label {
       width: 10em;
       font-size: 1em;
